--- a/style.css
+++ b/style.css
@@ -43,6 +43,8 @@ body {
 
 .card__face--back {
     transform: rotateY(180deg);
+    background-image: url('card-back.png');
+    background-size: cover;
 }
 
 img {
