--- a/style.css
+++ b/style.css
@@ -1,50 +1,76 @@
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+  background-color: #f0f0f0; /* Add background color */
+}
+
 .card {
-    position: relative;
-    width: 300px;
-    height: 400px;
-    transform-style: preserve-3d;
-    transition: transform 0.5s;
-  }
-  
-  .card.rotate {
-    transform: rotateY(180deg);
-  }
-  
-  .card .front,
-  .card .back {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    backface-visibility: hidden;
-  }
-  
-  .card .front {
-    background-color: #bbb;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-  }
-  
-  .card .back {
-    background-color: #333;
-    transform: rotateY(180deg);
-  }
-  
-  .card img {
-    max-width: 100%;
-    max-height: 100%;
-  }
-  
-  .card h2 {
-    margin-top: 20px;
-    font-size: 24px;
-    font-weight: bold;
-  }
-  
-  .card p {
-    margin-top: 10px;
-    font-size: 18px;
-    line-height: 1.5;
-  }
+  position: relative;
+  width: 250px;
+  height: 400px;
+  transform-style: preserve-3d;
+  transition: transform 1s;
+  border-radius: 10px; /* Add rounded corners */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Add box shadow */
+}
+
+.card.rotate {
+  transform: rotateY(180deg);
+}
+
+.card .front,
+.card .back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  border-radius: 10px; /* Add rounded corners */
+}
+
+.card .front {
+  background-color: #bbb;
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-color:#fff;
+}
+
+.card .back {
+  background-color: #333;
+  background: linear-gradient(to bottom, #9a92c7, #1b123bce);
+  transform: rotateY(180deg);
+}
+
+.card img {
+  max-width: none;
+  max-height: none;
+  border-radius: 10px; /* Add rounded corners */
+  width: 100%;
+  height: auto;
+}
+
+.card h2 {
+  margin-top: 1px;
+  font-size: 36px;
+  font-weight: bold;
+  color:#fff;
+}
+
+.card p {
+  margin-top: 1px;
+  font-size: 24px;
+  max-width: 300px;
+  color:#fff;
+  line-height: 1.5;
+}
