--- a/style.css
+++ b/style.css
@@ -5,25 +5,25 @@ body {
   height: 100vh;
   margin: 0;
   background-color: var(--tg-theme-bg-color); /* Add background color */
-  font-family: "Imbue",serif;
+  font-family: 'Poppins', sans-serif;
+  box-sizing: border-box;
 }
 .prevent-select{
   user-select: none;
 }
 .card {
   position: relative;
-  width: 60vw;
-  height: 53dvh;
+  width: 90vw;
+  height: 148vw;
   transform-style: preserve-3d;
   transition: transform 1s;
-  border-radius: 9px; /* Add rounded corners */
+  border-radius: 12px; /* Add rounded corners */
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   text-align: center;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Add box shadow */
 }
 
 .card.rotate {
@@ -47,53 +47,39 @@ body {
   justify-content: center;
   align-items: center;
   text-align: center;
+  font-color:#fff;
   background-image: url('images/card.jpg');
-  background-size:cover;
+  background-size: contain;
 }
 
 .card .back {
 
   background-color: #333;
-  background:transparent;
+  background: linear-gradient(to bottom, #9a92c7, #1b123bce);
   transform: rotateY(180deg);
   backface-visibility: hidden;
-    border: 10px solid transparent;
-  border-image: linear-gradient(to right, pink, gold) 10 / 10px round;
-  border-radius: 9px;
-  box-sizing: border-box;
-  background-color: transparent;
 }
 
 .card img {
-  position: absolute;
   max-width: none;
   max-height: none;
-  border-radius: 9px; /* Add rounded corners */
-  width: 380px;
+  border-radius: 10px; /* Add rounded corners */
+  width: 80vw;
   height: auto;
-  top:-100px;
-  left:-50px;
-
 }
 
 .card h2 {
-  position: absolute;
   margin-top: 1px;
-  font-size: 36px;
+  font-size: 4em;
   font-weight: bold;
   color:#fff;
-  top:280px;
-  left:70px;
-  
 }
 
 .card p {
-  position: absolute;
-  margin-top: 1px;
-  font-size: 24px;
-  max-width: 300px;
+  margin-left: 15vw;
+
+  font-size: 3em;
+  max-width: 60vw;
   color:#fff;
   line-height: 1.5;
-  top:330px;
-  left:20px;
 }
