--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ body {
   width: 100%;
   height: 100%;
   backface-visibility: hidden;
-  border-radius: 3em; /* Add rounded corners */
+  border-radius: 2%; /* Add rounded corners */
 }
 
 .card .front {
